--- a/especialidades/atencion_sociosanitaria.html
+++ b/especialidades/atencion_sociosanitaria.html
@@ -2,19 +2,19 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Web de CV Skills." />
-  <link rel="icon" type="image/jpg" href="../img/logoSkills.png" />
-  <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="stylesheet" href="../css/especialidades.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Web de CV Skills." />
+    <link rel="icon" type="image/jpg" href="../img/logoSkills.png" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/especialidades.css" />
 
-  <title>Web Skills CV</title>
+    <title>Web Skills CV</title>
 </head>
 
 <body>
-  <!--
+    <!--
         Copyright (c) 2022 Santiago Benito, Juan Antonio Herráiz, Olga Tello, Esteban Adarme
         
         Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -35,172 +35,148 @@
         OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
         SOFTWARE.
     -->
-  <nav>
-    <div class="hamburguer-menu">
-      <a class="item-menu" href="../index.html"><img class="logo" src="../img/logoSkills.png"
-          alt="Web Skills Logo" /></a>
-      <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
-      <div class="idiomas">
-        <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG" />
-        <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG" />
-      </div>
-      <button class="btn-toggle">
+    <nav>
+        <div class="hamburguer-menu">
+            <a class="item-menu" href="../index.html"><img class="logo" src="../img/logoSkills.png" alt="Web Skills Logo" /></a>
+            <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
+            <div class="idiomas">
+                <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG" />
+                <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG" />
+            </div>
+            <button class="btn-toggle">
         <img src="../img/menu.svg" alt="Botón menú" />
       </button>
-    </div>
+        </div>
 
-    <ul class="menu">
-      <li>
-        <a class="item-menu" href="../saber_mas/queson.html">¿Qué son?</a>
-      </li>
-      <li>
-        <a class="item-menu" href="../index.html#especialidades">Especialidades</a>
-      </li>
-      <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apúntate</a></li>
-      <p class="locationEvent-mobile">
-        Feria valencia <br />
-        27 al 31 de Marzo
-      </p>
-    </ul>
-  </nav>
-  <main>
-    <section class="section-primary">
-      <h1 class="title-espec">Atención sociosanitaria</h1>
-      <div class="display-flow-especialidad">
-        <article class="wrapper-image-section-profesional">
-          <div>
-            <img class="img-profesional" src="../img/skills/atencion.jpg" alt="Imagen Atención sociosanitaria" />
-          </div>
-
-          <!-- <div class="position-profesional2">
-            <p class="text subtitulo">De lo mejorcito de valencia</p>
-            <ul class="text text-padding">
-              <li class="lista-li"><b>Lorenzo el pofesional</b></li>
-              <li class="lista-li">Lorenzo@fpmislata.com</li>
-            </ul>
-          </div> -->
-
-          <div class="position-profesional">
-            <div class="card-container-profile-desktop">
-              <div class="card">
-                <div class="card-header">
-                  <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
-                </div>
-                <div class="card-body">
-                  <p class="name">LUCÍA LUNA</p>
-                  <p class="card_instituto">CIPFP CANASTELL</p>
-                  <p class="description">¿Quieres saber más?</p>
-                  <p class="description">
-                    Ponte en contacto con <b>Lucía,</b> la coordinadora
-                    técnica del skill de
-                    <b>Atención&nbsp;sociosanitaria</b>
-                  </p>
-                  <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
-                </div>
-
-                <div class="card-footer">
-                  <p class="count"></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="wrapper-image-section-left-profesional">
-          <p class="text-profesional-last">
-            Incluye los cuidados y vigilancia del estado físico de un o una paciente o usuario, la colaboración en la
-            prestación de cuidados psíquicos, el cuidado de las condiciones sanitarias del entorno del paciente o
-            usuario y las tareas de instrumentación, tanto a nivel hospitalario, como en atención primaria así como en
-            equipos bucodental.
-          </p>
-
-          <p class="text subtitulo">Ciclos formativos relacionados</p>
-          <ul class="text text-padding-profesional">
+        <ul class="menu">
             <li>
-              Técnico en
-              <b>Atención a Personas en Situación de Dependencia</b>
+                <a class="item-menu" href="../saber_mas/queson.html">¿Qué son?</a>
             </li>
-            <li>Técnico en <b>Cuidados Auxiliares de Enfermería</b></li>
-          </ul>
-          <p class="text subtitulo">Aplicaciones</p>
-          <p class="text-profesional">
-            Las aplicaciones de estas skill se realizan en dos sectores muy
-            importantes: sanitario y de servicios.
-            <br />
-          </p>
-          <p class="text-profesional">
-            En el sector sanitario, desarrollando las funciones de auxiliar de
-            clínica y constituye la formación requerida para trabajar en el
-            sector, tanto público como privado.
-          </p>
-          <br />
-          <p class="text-profesional">
-            En el sector servicios, desarrollando todas las funciones de
-            auxiliar en el área de servicios personales de atención a la
-            dependencia, tanto público como privado.
-          </p>
-        </article>
-        <div class="card-container-profile">
-          <div class="card">
-            <div class="card-header">
-              <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
+            <li>
+                <a class="item-menu" href="../index.html#especialidades">Especialidades</a>
+            </li>
+            <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apúntate</a></li>
+            <p class="locationEvent-mobile">
+                Feria valencia <br /> 27 al 31 de Marzo
+            </p>
+        </ul>
+    </nav>
+    <main>
+        <section class="section-primary">
+            <h1 class="title-espec">Atención sociosanitaria</h1>
+            <div class="display-flow-especialidad">
+                <article class="wrapper-image-section-profesional">
+                    <div>
+                        <img class="img-profesional" src="../img/skills/atencion.jpg" alt="Imagen Atención sociosanitaria" />
+                    </div>
+
+
+                    <div class="position-profesional">
+                        <div class="card-container-profile-desktop">
+                            <div class="card">
+                                <div class="card-header">
+                                    <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
+                                </div>
+                                <div class="card-body">
+                                    <p class="name">LUCÍA LUNA</p>
+                                    <p class="card_instituto">CIPFP CANASTELL</p>
+                                    <p class="description">¿Quieres saber más?</p>
+                                    <p class="description">
+                                        Ponte en contacto con <b>Lucía,</b> la coordinadora técnica del skill de
+                                        <b>Atención&nbsp;sociosanitaria</b>
+                                    </p>
+                                    <a href="mailto:l.lunaherrero@edu.gva.es" class="mail">l.lunaherrero@edu.gva.es</a>
+                                </div>
+
+                                <div class="card-footer">
+                                    <p class="count"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="wrapper-image-section-left-profesional">
+                    <p class="text-profesional-last">
+                        Incluye los cuidados y vigilancia del estado físico de un o una paciente o usuario, la colaboración en la prestación de cuidados psíquicos, el cuidado de las condiciones sanitarias del entorno del paciente o usuario y las tareas de instrumentación, tanto
+                        a nivel hospitalario, como en atención primaria así como en equipos bucodental.
+                    </p>
+
+                    <p class="text subtitulo">Ciclos formativos relacionados</p>
+                    <ul class="text text-padding-profesional">
+                        <li>
+                            Técnico en
+                            <b>Atención a Personas en Situación de Dependencia</b>
+                        </li>
+                        <li>Técnico en <b>Cuidados Auxiliares de Enfermería</b></li>
+                    </ul>
+                    <p class="text subtitulo">Aplicaciones</p>
+                    <p class="text-profesional">
+                        Las aplicaciones de estas skill se realizan en dos sectores muy importantes: sanitario y de servicios.
+                        <br />
+                    </p>
+                    <p class="text-profesional">
+                        En el sector sanitario, desarrollando las funciones de auxiliar de clínica y constituye la formación requerida para trabajar en el sector, tanto público como privado.
+                    </p>
+                    <br />
+                    <p class="text-profesional">
+                        En el sector servicios, desarrollando todas las funciones de auxiliar en el área de servicios personales de atención a la dependencia, tanto público como privado.
+                    </p>
+                </article>
+                <div class="card-container-profile">
+                    <div class="card">
+                        <div class="card-header">
+                            <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
+                        </div>
+                        <div class="card-body">
+                            <p class="name">LUCÍA LUNA</p>
+                            <p class="card_instituto">CIPFP CANASTELL</p>
+                            <p class="description">¿Quieres saber más?</p>
+                            <p class="description">
+                                Ponte en contacto con <b>Lucía,</b> la coordinadora técnica del skill de
+                                <b>Atención&nbsp;sociosanitaria</b>
+                            </p>
+                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                        </div>
+
+                        <div class="card-footer">
+                            <p class="count"></p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="card-body">
-              <p class="name">LUCÍA LUNA</p>
-              <p class="card_instituto">CIPFP CANASTELL</p>
-              <p class="description">¿Quieres saber más?</p>
-              <p class="description">
-                Ponte en contacto con <b>Lucía,</b> la coordinadora
-                técnica del skill de
-                <b>Atención&nbsp;sociosanitaria</b>
-              </p>
-              <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
-            </div>
+        </section>
+        <section class="section-secondary">
+            <article class="video-container">
+                <div class="wrapper-video-section">
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/683358489?h=0079c693e7&dnt=1&app_id=122963" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/682981486?h=d3316920ff&dnt=1&app_id=122963" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/683012701?h=ec6022c60d&dnt=1&app_id=122963" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </article>
+        </section>
+    </main>
 
-            <div class="card-footer">
-              <p class="count"></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="section-secondary">
-      <article class="video-container">
-        <div class="wrapper-video-section">
-          <iframe class="video-skills" src="https://player.vimeo.com/video/683358489?h=0079c693e7&dnt=1&app_id=122963"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <iframe class="video-skills" src="https://player.vimeo.com/video/682981486?h=d3316920ff&dnt=1&app_id=122963"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <iframe class="video-skills" src="https://player.vimeo.com/video/683012701?h=ec6022c60d&dnt=1&app_id=122963"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
-      </article>
-    </section>
-  </main>
+    <footer>
+        <ul class="footer-section">
+            <li>
+                <a class="footer-item" href="../saber_mas/terminos.html">Terms</a>
+            </li>
+            <li><a class="footer-item">|</a></li>
+            <li>
+                <a class="footer-item" href="../saber_mas/policy.html">Policy</a>
+            </li>
+            <li><a class="footer-item">|</a></li>
+            <li><a class="footer-item" href="#">Contacto</a></li>
+        </ul>
 
-  <footer>
-    <ul class="footer-section">
-      <li>
-        <a class="footer-item" href="../saber_mas/terminos.html">Terms</a>
-      </li>
-      <li><a class="footer-item">|</a></li>
-      <li>
-        <a class="footer-item" href="../saber_mas/policy.html">Policy</a>
-      </li>
-      <li><a class="footer-item">|</a></li>
-      <li><a class="footer-item" href="#">Contacto</a></li>
-    </ul>
+        <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
+        <p><br /><br /></p>
+    </footer>
 
-    <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
-    <p><br /><br /></p>
-  </footer>
-
-  <script src="../js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
