--- a/especialidades/flosristeria.html
+++ b/especialidades/flosristeria.html
@@ -2,18 +2,18 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Web de CV Skills." />
-  <link rel="icon" type="image/jpg" href="../img/logoSkills.png" />
-  <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="stylesheet" href="../css/especialidades.css" />
-  <title>Web Skills CV</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Web de CV Skills." />
+    <link rel="icon" type="image/jpg" href="../img/logoSkills.png" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/especialidades.css" />
+    <title>Web Skills CV</title>
 </head>
 
 <body>
-  <!--
+    <!--
         Copyright (c) 2022 Santiago Benito, Juan Antonio Herráiz, Olga Tello, Esteban Adarme
         
         Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -34,171 +34,149 @@
         OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
         SOFTWARE.
     -->
-  <nav>
-    <div class="hamburguer-menu">
-      <a class="item-menu" href="../index.html"><img class="logo" src="../img/logoSkills.png"
-          alt="Web Skills Logo" /></a>
-      <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
-      <div class="idiomas">
-        <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG" />
-        <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG" />
-      </div>
-      <button class="btn-toggle">
+    <nav>
+        <div class="hamburguer-menu">
+            <a class="item-menu" href="../index.html"><img class="logo" src="../img/logoSkills.png" alt="Web Skills Logo" /></a>
+            <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
+            <div class="idiomas">
+                <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG" />
+                <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG" />
+            </div>
+            <button class="btn-toggle">
         <img src="../img/menu.svg" alt="Botón menú" />
       </button>
-    </div>
+        </div>
 
-    <ul class="menu">
-      <li>
-        <a class="item-menu" href="../saber_mas/queson.html">¿Qué son?</a>
-      </li>
-      <li>
-        <a class="item-menu" href="../index.html#especialidades">Especialidades</a>
-      </li>
-      <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apúntate</a></li>
-      <p class="locationEvent-mobile">
-        Feria valencia <br />
-        27 al 31 de Marzo
-      </p>
-    </ul>
-  </nav>
-
-  <main>
-    <section class="section-primary">
-      <h1 class="title-espec">Floristería</h1>
-      <div class="display-flow-especialidad">
-        <article class="wrapper-image-section-profesional">
-          <div>
-            <img class="img-profesional" src="../img/skills/floristeria.jpg" alt="Imagen Floristeria" />
-          </div>
-
-          <!-- <div class="position-profesional2">
-            <p class="text subtitulo">De lo mejorcito de valencia</p>
-            <ul class="text text-padding">
-              <li class="lista-li"><b>Lorenzo el pofesional</b></li>
-              <li class="lista-li">Lorenzo@fpmislata.com</li>
-            </ul>
-          </div> -->
-
-          <div class="position-profesional">
-            <div class="card-container-profile-desktop">
-              <div class="card">
-                <div class="card-header">
-                  <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
-                </div>
-                <div class="card-body">
-                  <p class="name">LOURDES MIRALLES</p>
-                  <p class="card_instituto">IES EL SALER</p>
-                  <p class="description">¿Quieres saber más?</p>
-                  <p class="description">
-                    Ponte en contacto con <b>Lourdes,</b> el coordinadora
-                    técnica del skill de
-                    <b>Floristería</b>
-                  </p>
-                  <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
-                </div>
-
-                <div class="card-footer">
-                  <p class="count"></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="wrapper-image-section-left-profesional">
-          <p class="text-profesional-last">
-            La floristeria comprén la realització de composicions florals i/o plantes, utilitzant per a això espècies
-            vegetals i altres materials; això comporta des de coneixements bàsics de botànica fins als períodes de
-            comercialització i adquisició de la matèria primera depenent de l'època de l'any.
-          </p>
-
-          <p class="text subtitulo">Ciclos formativos relacionados</p>
-          <ul class="text text-padding-profesional">
+        <ul class="menu">
             <li>
-              Título Profesional Básico en
-              <b>Agrojardinería y Composiciones Florales</b>
+                <a class="item-menu" href="../saber_mas/queson.html">¿Qué son?</a>
             </li>
             <li>
-              Técnico en
-              <b>Jardinería y Floristería</b>
+                <a class="item-menu" href="../index.html#especialidades">Especialidades</a>
             </li>
-          </ul>
-          <p class="text subtitulo">Aplicaciones</p>
-          <p class="text-profesional">
-            Su aplicación engloba tanto el diseño de bocetos de composiciones
-            florales como la realización de composiciones con flores y plantas
-            con criterio estético, conocimientos básicos sobre la teoría del
-            color, marcando un estilo y un diseño.
-            <br />
-          </p>
-          <p class="text-profesional">
-            Esto implica el conocimiento de la utilización de plantas
-            naturales y flores y plantas secas, así como otros materiales que
-            se utilizan en la actualidad en las composiciones florales.
-          </p>
-        </article>
-        <div class="card-container-profile">
-          <div class="card">
-            <div class="card-header">
-              <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
+            <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apúntate</a></li>
+            <p class="locationEvent-mobile">
+                Feria valencia <br /> 27 al 31 de Marzo
+            </p>
+        </ul>
+    </nav>
+
+    <main>
+        <section class="section-primary">
+            <h1 class="title-espec">Floristería</h1>
+            <div class="display-flow-especialidad">
+                <article class="wrapper-image-section-profesional">
+                    <div>
+                        <img class="img-profesional" src="../img/skills/floristeria.jpg" alt="Imagen Floristeria" />
+                    </div>
+
+
+
+                    <div class="position-profesional">
+                        <div class="card-container-profile-desktop">
+                            <div class="card">
+                                <div class="card-header">
+                                    <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
+                                </div>
+                                <div class="card-body">
+                                    <p class="name">LOURDES MIRALLES</p>
+                                    <p class="card_instituto">IES EL SALER</p>
+                                    <p class="description">¿Quieres saber más?</p>
+                                    <p class="description">
+                                        Ponte en contacto con <b>Lourdes,</b> el coordinadora técnica del skill de
+                                        <b>Floristería</b>
+                                    </p>
+                                    <a href="mailto:l.mirallesbellver2@edu.gva.es" class="mail">l.mirallesbellver2@edu.gva.es</a>
+                                </div>
+
+                                <div class="card-footer">
+                                    <p class="count"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="wrapper-image-section-left-profesional">
+                    <p class="text-profesional-last">
+                        La floristeria comprén la realització de composicions florals i/o plantes, utilitzant per a això espècies vegetals i altres materials; això comporta des de coneixements bàsics de botànica fins als períodes de comercialització i adquisició de la matèria
+                        primera depenent de l'època de l'any.
+                    </p>
+
+                    <p class="text subtitulo">Ciclos formativos relacionados</p>
+                    <ul class="text text-padding-profesional">
+                        <li>
+                            Título Profesional Básico en
+                            <b>Agrojardinería y Composiciones Florales</b>
+                        </li>
+                        <li>
+                            Técnico en
+                            <b>Jardinería y Floristería</b>
+                        </li>
+                    </ul>
+                    <p class="text subtitulo">Aplicaciones</p>
+                    <p class="text-profesional">
+                        Su aplicación engloba tanto el diseño de bocetos de composiciones florales como la realización de composiciones con flores y plantas con criterio estético, conocimientos básicos sobre la teoría del color, marcando un estilo y un diseño.
+                        <br />
+                    </p>
+                    <p class="text-profesional">
+                        Esto implica el conocimiento de la utilización de plantas naturales y flores y plantas secas, así como otros materiales que se utilizan en la actualidad en las composiciones florales.
+                    </p>
+                </article>
+                <div class="card-container-profile">
+                    <div class="card">
+                        <div class="card-header">
+                            <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
+                        </div>
+                        <div class="card-body">
+                            <p class="name">LOURDES MIRALLES</p>
+                            <p class="card_instituto">IES EL SALER</p>
+                            <p class="description">¿Quieres saber más?</p>
+                            <p class="description">
+                                Ponte en contacto con <b>Lourdes,</b> el coordinadora técnica del skill de
+                                <b>Floristería</b>
+                            </p>
+                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                        </div>
+
+                        <div class="card-footer">
+                            <p class="count"></p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="card-body">
-              <p class="name">LOURDES MIRALLES</p>
-              <p class="card_instituto">IES EL SALER</p>
-              <p class="description">¿Quieres saber más?</p>
-              <p class="description">
-                Ponte en contacto con <b>Lourdes,</b> el coordinadora
-                técnica del skill de
-                <b>Floristería</b>
-              </p>
-              <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
-            </div>
+        </section>
+        <section class="section-secondary">
+            <article class="video-container">
+                <div class="wrapper-video-section">
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/659354396?h=0feca55aee&dnt=1&app_id=122963" title="Florister&iacute;a CAS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/659288694?h=d128638fba&dnt=1&app_id=122963" title="Floristeria Alumnos CAS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/659288751?h=06a64805f0&dnt=1&app_id=122963" title="Floristeria Experta CAS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </article>
+        </section>
+    </main>
 
-            <div class="card-footer">
-              <p class="count"></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="section-secondary">
-      <article class="video-container">
-        <div class="wrapper-video-section">
-          <iframe class="video-skills" src="https://player.vimeo.com/video/659354396?h=0feca55aee&dnt=1&app_id=122963"
-            title="Florister&iacute;a CAS" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <iframe class="video-skills" src="https://player.vimeo.com/video/659288694?h=d128638fba&dnt=1&app_id=122963"
-            title="Floristeria Alumnos CAS" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <iframe class="video-skills" src="https://player.vimeo.com/video/659288751?h=06a64805f0&dnt=1&app_id=122963"
-            title="Floristeria Experta CAS" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
-      </article>
-    </section>
-  </main>
+    <footer>
+        <ul class="footer-section">
+            <li>
+                <a class="footer-item" href="../saber_mas/terminos.html">Terms</a>
+            </li>
+            <li><a class="footer-item">|</a></li>
+            <li>
+                <a class="footer-item" href="../saber_mas/policy.html">Policy</a>
+            </li>
+            <li><a class="footer-item">|</a></li>
+            <li><a class="footer-item" href="#">Contacto</a></li>
+        </ul>
 
-  <footer>
-    <ul class="footer-section">
-      <li>
-        <a class="footer-item" href="../saber_mas/terminos.html">Terms</a>
-      </li>
-      <li><a class="footer-item">|</a></li>
-      <li>
-        <a class="footer-item" href="../saber_mas/policy.html">Policy</a>
-      </li>
-      <li><a class="footer-item">|</a></li>
-      <li><a class="footer-item" href="#">Contacto</a></li>
-    </ul>
+        <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
+        <p><br /><br /></p>
+    </footer>
 
-    <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
-    <p><br /><br /></p>
-  </footer>
-
-  <script src="../js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
