--- a/especialidades/fontaneria_calefaccion.html
+++ b/especialidades/fontaneria_calefaccion.html
@@ -2,18 +2,18 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Web de CV Skills." />
-  <link rel="icon" type="image/jpg" href="../img/logoSkills.png" />
-  <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="stylesheet" href="../css/especialidades.css" />
-  <title>Web Skills CV</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Web de CV Skills." />
+    <link rel="icon" type="image/jpg" href="../img/logoSkills.png" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/especialidades.css" />
+    <title>Web Skills CV</title>
 </head>
 
 <body>
-  <!--
+    <!--
         Copyright (c) 2022 Santiago Benito, Juan Antonio Herráiz, Olga Tello, Esteban Adarme
         
         Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -34,186 +34,165 @@
         OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
         SOFTWARE.
     -->
-  <nav>
-    <div class="hamburguer-menu">
-      <a class="item-menu" href="../index.html"><img class="logo" src="../img/logoSkills.png"
-          alt="Web Skills Logo" /></a>
-      <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
-      <div class="idiomas">
-        <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG" />
-        <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG" />
-      </div>
-      <button class="btn-toggle">
+    <nav>
+        <div class="hamburguer-menu">
+            <a class="item-menu" href="../index.html"><img class="logo" src="../img/logoSkills.png" alt="Web Skills Logo" /></a>
+            <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
+            <div class="idiomas">
+                <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG" />
+                <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG" />
+            </div>
+            <button class="btn-toggle">
         <img src="../img/menu.svg" alt="Botón menú" />
       </button>
-    </div>
+        </div>
 
-    <ul class="menu">
-      <li>
-        <a class="item-menu" href="../saber_mas/queson.html">¿Qué son?</a>
-      </li>
-      <li>
-        <a class="item-menu" href="../index.html#especialidades">Especialidades</a>
-      </li>
-      <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apúntate</a></li>
-      <p class="locationEvent-mobile">
-        Feria valencia <br />
-        27 al 31 de Marzo
-      </p>
-    </ul>
-  </nav>
-
-  <main>
-    <section class="section-primary">
-      <h1 class="title-espec">Fontanería y Calefacción</h1>
-      <div class="display-flow-especialidad">
-        <article class="wrapper-image-section-profesional">
-          <div>
-            <img class="img-profesional" src="../img/skills/fontaneria.jpg" alt="Imagen desarrollo web" />
-          </div>
-
-          <!-- <div class="position-profesional2">
-            <p class="text subtitulo">De lo mejorcito de valencia</p>
-            <ul class="text text-padding">
-              <li class="lista-li"><b>Lorenzo el pofesional</b></li>
-              <li class="lista-li">Lorenzo@fpmislata.com</li>
-            </ul>
-          </div> -->
-
-          <div class="position-profesional">
-            <div class="card-container-profile-desktop">
-              <div class="card">
-                <div class="card-header">
-                  <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
-                </div>
-                <div class="card-body">
-                  <p class="name">CAMILO GISBERT</p>
-                  <p class="card_instituto">IES RASCANYA ANTONIO CAÑUELO</p>
-                  <p class="description">¿Quieres saber más?</p>
-                  <p class="description">
-                    Ponte en contacto con <b>Camilo,</b> el coordinador técnico del skill de
-                    <b>Fontanería&nbsp;y&nbsp;Calefacción</b>
-                  </p>
-                  <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
-                </div>
-
-                <div class="card-footer">
-                  <p class="count"></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="wrapper-image-section-left-profesional">
-          <p class="text-profesional-last">
-            Es una especialidad que supone la instalación de los diferentes componentes que conforman el sistema de
-            tuberías de agua, calefacción, desagüe, sanitarios en domicilios particulares, edificios y locales
-            industriales. Incluye instalaciones de tuberías de gas natural, manufacturado, GLPs y aire comprimido.
-          </p>
-          <p class="text subtitulo">Ciclos formativos relacionados</p>
-          <ul class="text text-padding-profesional">
+        <ul class="menu">
             <li>
-              Título Profesional Básico en
-              <b>Fabricación y Montaje</b>
+                <a class="item-menu" href="../saber_mas/queson.html">¿Qué son?</a>
             </li>
             <li>
-              Título Profesional Básico en
-              <b>Mantenimiento de Viviendas</b>
+                <a class="item-menu" href="../index.html#especialidades">Especialidades</a>
             </li>
-            <li>
-              Técnico en
-              <b>Instalaciones de Producción de Calor</b>
-            </li>
-            <li>
-              Técnico en
-              <b>Instalaciones Frigoríficas y de Climatización</b>
-            </li>
-            <li>
-              Técnico Superior en
-              <b>Desarrollo de Proyectos de Instalaciones Térmica y de
+            <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apúntate</a></li>
+            <p class="locationEvent-mobile">
+                Feria valencia <br /> 27 al 31 de Marzo
+            </p>
+        </ul>
+    </nav>
+
+    <main>
+        <section class="section-primary">
+            <h1 class="title-espec">Fontanería y Calefacción</h1>
+            <div class="display-flow-especialidad">
+                <article class="wrapper-image-section-profesional">
+                    <div>
+                        <img class="img-profesional" src="../img/skills/fontaneria.jpg" alt="Imagen desarrollo web" />
+                    </div>
+
+
+                    <div class="position-profesional">
+                        <div class="card-container-profile-desktop">
+                            <div class="card">
+                                <div class="card-header">
+                                    <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
+                                </div>
+                                <div class="card-body">
+                                    <p class="name">CAMILO GISBERT</p>
+                                    <p class="card_instituto">IES RASCANYA ANTONIO CAÑUELO</p>
+                                    <p class="description">¿Quieres saber más?</p>
+                                    <p class="description">
+                                        Ponte en contacto con <b>Camilo,</b> el coordinador técnico del skill de
+                                        <b>Fontanería&nbsp;y&nbsp;Calefacción</b>
+                                    </p>
+                                    <a href="mailto:c.gisbertgarcia@edu.gva.es" class="mail">c.gisbertgarcia@edu.gva.es</a>
+                                </div>
+
+                                <div class="card-footer">
+                                    <p class="count"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="wrapper-image-section-left-profesional">
+                    <p class="text-profesional-last">
+                        Es una especialidad que supone la instalación de los diferentes componentes que conforman el sistema de tuberías de agua, calefacción, desagüe, sanitarios en domicilios particulares, edificios y locales industriales. Incluye instalaciones de tuberías
+                        de gas natural, manufacturado, GLPs y aire comprimido.
+                    </p>
+                    <p class="text subtitulo">Ciclos formativos relacionados</p>
+                    <ul class="text text-padding-profesional">
+                        <li>
+                            Título Profesional Básico en
+                            <b>Fabricación y Montaje</b>
+                        </li>
+                        <li>
+                            Título Profesional Básico en
+                            <b>Mantenimiento de Viviendas</b>
+                        </li>
+                        <li>
+                            Técnico en
+                            <b>Instalaciones de Producción de Calor</b>
+                        </li>
+                        <li>
+                            Técnico en
+                            <b>Instalaciones Frigoríficas y de Climatización</b>
+                        </li>
+                        <li>
+                            Técnico Superior en
+                            <b>Desarrollo de Proyectos de Instalaciones Térmica y de
                 Fluidos</b>
-            </li>
+                        </li>
+                        <li>
+                            Título Superior en
+                            <b>Mantenimiento de Instalaciones Térmicas y de Fluidos</b>
+                        </li>
+                    </ul>
+                    <p class="text subtitulo">Aplicaciones</p>
+                    <p class="text-profesional">
+                        Su aplicación se extiende tanto al ámbito público como al privado y a todos los sectores productivos.
+                        <br />
+                    </p>
+                    <p class="text-profesional">
+                        Las aplicaciones de este sector son muy variadas y múltiples, incluyen la instalación y fijación de los diversos elementos sanitarios, la instalación de componentes y accesorios terminales en sanitarios y calefacción, por ejemplo duchas, lavabos, inodoros,
+                        calderas, radiadores y bombas de circulación, así como su mantenimiento, detección de fallos y reparación.
+                    </p>
+                </article>
+                <div class="card-container-profile">
+                    <div class="card">
+                        <div class="card-header">
+                            <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
+                        </div>
+                        <div class="card-body">
+                            <p class="name">CAMILO GISBERT</p>
+                            <p class="card_instituto">IES RASCANYA ANTONIO CAÑUELO</p>
+                            <p class="description">¿Quieres saber más?</p>
+                            <p class="description">
+                                Ponte en contacto con <b>Camilo,</b> el coordinador técnico del skill de
+                                <b>Fontanería&nbsp;y&nbsp;calefacción</b>
+                            </p>
+                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                        </div>
+
+                        <div class="card-footer">
+                            <p class="count"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-secondary">
+            <article class="video-container">
+                <div class="wrapper-video-section">
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/685010118?h=adacbf5e07&dnt=1&app_id=122963" title="MASTER FONTANERIA CALEFACION CASTELLANO 27122021.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/659816269?h=9817e2030e&dnt=1&app_id=122963" title="PARTICIPANTES FONTANERIA Y CALEFACCION VALENCIANO.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/660419814?h=398af5bbed&dnt=1&app_id=122963" title="FONTANERIA Y CALEFACCION  EXPERTO CASTELLANO.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <ul class="footer-section">
             <li>
-              Título Superior en
-              <b>Mantenimiento de Instalaciones Térmicas y de Fluidos</b>
+                <a class="footer-item" href="../saber_mas/terminos.html">Terms</a>
             </li>
-          </ul>
-          <p class="text subtitulo">Aplicaciones</p>
-          <p class="text-profesional">
-            Su aplicación se extiende tanto al ámbito público como al privado
-            y a todos los sectores productivos.
-            <br />
-          </p>
-          <p class="text-profesional">
-            Las aplicaciones de este sector son muy variadas y múltiples,
-            incluyen la instalación y fijación de los diversos elementos
-            sanitarios, la instalación de componentes y accesorios terminales
-            en sanitarios y calefacción, por ejemplo duchas, lavabos,
-            inodoros, calderas, radiadores y bombas de circulación, así como
-            su mantenimiento, detección de fallos y reparación.
-          </p>
-        </article>
-        <div class="card-container-profile">
-          <div class="card">
-            <div class="card-header">
-              <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
-            </div>
-            <div class="card-body">
-              <p class="name">CAMILO GISBERT</p>
-              <p class="card_instituto">IES RASCANYA ANTONIO CAÑUELO</p>
-              <p class="description">¿Quieres saber más?</p>
-              <p class="description">
-                Ponte en contacto con <b>Camilo,</b> el coordinador técnico del skill de
-                <b>Fontanería&nbsp;y&nbsp;calefacción</b>
-              </p>
-              <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
-            </div>
+            <li><a class="footer-item">|</a></li>
+            <li>
+                <a class="footer-item" href="../saber_mas/policy.html">Policy</a>
+            </li>
+            <li><a class="footer-item">|</a></li>
+            <li><a class="footer-item" href="#">Contacto</a></li>
+        </ul>
 
-            <div class="card-footer">
-              <p class="count"></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="section-secondary">
-      <article class="video-container">
-        <div class="wrapper-video-section">
-          <iframe class="video-skills" src="https://player.vimeo.com/video/685010118?h=adacbf5e07&dnt=1&app_id=122963"
-            title="MASTER FONTANERIA CALEFACION CASTELLANO 27122021.mp4" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <iframe class="video-skills" src="https://player.vimeo.com/video/659816269?h=9817e2030e&dnt=1&app_id=122963"
-            title="PARTICIPANTES FONTANERIA Y CALEFACCION VALENCIANO.mp4" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <iframe class="video-skills" src="https://player.vimeo.com/video/660419814?h=398af5bbed&dnt=1&app_id=122963"
-            title="FONTANERIA Y CALEFACCION  EXPERTO CASTELLANO.mp4" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
-      </article>
-    </section>
-  </main>
+        <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
+        <p><br /><br /></p>
+    </footer>
 
-  <footer>
-    <ul class="footer-section">
-      <li>
-        <a class="footer-item" href="../saber_mas/terminos.html">Terms</a>
-      </li>
-      <li><a class="footer-item">|</a></li>
-      <li>
-        <a class="footer-item" href="../saber_mas/policy.html">Policy</a>
-      </li>
-      <li><a class="footer-item">|</a></li>
-      <li><a class="footer-item" href="#">Contacto</a></li>
-    </ul>
-
-    <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
-    <p><br /><br /></p>
-  </footer>
-
-  <script src="../js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
