--- a/especialidades/tecnologia_automovil.html
+++ b/especialidades/tecnologia_automovil.html
@@ -2,18 +2,18 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Web de CV Skills." />
-  <link rel="icon" type="image/jpg" href="../img/logoSkills.png" />
-  <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="stylesheet" href="../css/especialidades.css" />
-  <title>Web Skills CV</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Web de CV Skills." />
+    <link rel="icon" type="image/jpg" href="../img/logoSkills.png" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/especialidades.css" />
+    <title>Web Skills CV</title>
 </head>
 
 <body>
-  <!--
+    <!--
         Copyright (c) 2022 Santiago Benito, Juan Antonio Herráiz, Olga Tello, Esteban Adarme
         
         Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -34,159 +34,140 @@
         OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
         SOFTWARE.
     -->
-  <nav>
-    <div class="hamburguer-menu">
-      <a class="item-menu" href="../index.html"><img class="logo" src="../img/logoSkills.png"
-          alt="Web Skills Logo" /></a>
-      <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
-      <div class="idiomas">
-        <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG">
-        <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG">
-      </div>
-      <button class="btn-toggle">
+    <nav>
+        <div class="hamburguer-menu">
+            <a class="item-menu" href="../index.html"><img class="logo" src="../img/logoSkills.png" alt="Web Skills Logo" /></a>
+            <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
+            <div class="idiomas">
+                <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG">
+                <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG">
+            </div>
+            <button class="btn-toggle">
         <img src="../img/menu.svg" alt="Botón menú" />
       </button>
-    </div>
-
-    <ul class="menu">
-      <li><a class="item-menu" href="../saber_mas/queson.html">¿Qué son?</a></li>
-      <li>
-        <a class="item-menu" href="../index.html#especialidades">Especialidades</a>
-      </li>
-      <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apúntate</a></li>
-      <p class="locationEvent-mobile">
-        Feria valencia <br />
-        27 al 31 de Marzo
-      </p>
-    </ul>
-  </nav>
-
-  <main>
-    <section class="section-primary">
-      <h1 class="title-espec">Tecnología del Automóvil </h1>
-      <div class="display-flow-especialidad">
-        <article class="wrapper-image-section-profesional">
-          <div>
-            <img class="img-profesional" src="../img/skills/tecnologia_automovil.jpg"
-              alt="Imagen Tecnología del Automóvil " />
-          </div>
-
-          <!-- <div class="position-profesional2">
-            <p class="text subtitulo">De lo mejorcito de valencia</p>
-            <ul class="text text-padding">
-              <li class="lista-li"><b>Lorenzo el pofesional</b></li>
-              <li class="lista-li">Lorenzo@fpmislata.com</li>
-            </ul>
-          </div> -->
-
-          <div class="position-profesional">
-            <div class="card-container-profile-desktop">
-              <div class="card">
-                <div class="card-header">
-                  <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
-                </div>
-                <div class="card-body">
-                  <p class="name">SUSANA DOMENECH</p>
-                  <p class="card_instituto">IES LES ALFÀBEGUES</p>
-                  <p class="description">
-                    ¿Quieres saber más?
-                  </p>
-                  <p class="description">Ponte en contacto con <b>Susana,</b> la coordinadora técnica del skill de
-                    <b>Tecnología&nbsp;del&nbsp;Automóvil</b>
-                  </p>
-                  <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
-                </div>
-                <div class="card-footer">
-                  <p class="count"></p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </article>
-        <article class="wrapper-image-section-left-profesional">
-          <p class="text-profesional-last">
-            Los técnicos de esta modalidad de competición deben ser capaces de entender los diferentes sistemas del
-            vehículo como son motores, transmisiones, frenado, electricidad, dirección y suspensión y llevar a cabo
-            solución de problemas, mantenimiento y reparación de los mismos.
-          </p>
-
-          <p class="text subtitulo">Ciclos formativos relacionados</p>
-          <ul class="text text-padding-profesional">
-            <li>
-              Técnico Superior en
-              <b>Automoción</b>
-            </li>
-            <li>
-              Técnico en
-              <b>Carrocería</b>
-            </li>
-          </ul>
-          <p class="text subtitulo">Aplicaciones</p>
-          <p class="text-profesional">
-            Estas técnicas de mantenimiento y reparación se desarrollan en los sectores productivos como: talleres de
-            reparación de automóviles, reparación de maquinaria agrícola y obras públicas y reparación de vehículos
-            industriales.
-          </p>
-        </article>
-
-        <div class="card-container-profile">
-          <div class="card">
-            <div class="card-header">
-              <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
-            </div>
-            <div class="card-body">
-              <p class="name">SUSANA DOMENECH</p>
-              <p class="card_instituto">IES LES ALFÀBEGUES</p>
-              <p class="description">
-                ¿Quieres saber más?
-              </p>
-              <p class="description">Ponte en contacto con <b>Susana,</b> la coordinadora técnica del skill de
-                <b>Tecnología&nbsp;del&nbsp;Automóvil</b>
-              </p>
-              <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
-            </div>
-            <div class="card-footer">
-              <p class="count"></p>
-            </div>
-          </div>
         </div>
 
-    </section>
-    <section class="section-secondary">
-      <article class="video-container">
-        <div class="wrapper-video-section">
-          <iframe class="video-skills" src="https://player.vimeo.com/video/659355072?h=994f330cb2&dnt=1&app_id=122963"
-            title="Tecnolog&iacute;a del Autom&oacute;vil CAS" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <iframe class="video-skills" src="https://player.vimeo.com/video/659341995?h=250dbc9f13&dnt=1&app_id=122963"
-            title="Tecnolog&iacute;a del automovil Alumnos CAS" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <iframe class="video-skills" src="https://player.vimeo.com/video/659312212?h=f137f7f292&dnt=1&app_id=122963"
-            title="Tecnolog&iacute;a del automovil Experto CAS" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
-      </article>
-    </section>
-  </main>
+        <ul class="menu">
+            <li><a class="item-menu" href="../saber_mas/queson.html">¿Qué son?</a></li>
+            <li>
+                <a class="item-menu" href="../index.html#especialidades">Especialidades</a>
+            </li>
+            <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apúntate</a></li>
+            <p class="locationEvent-mobile">
+                Feria valencia <br /> 27 al 31 de Marzo
+            </p>
+        </ul>
+    </nav>
 
-  <footer>
-    <ul class="footer-section">
-      <li><a class="footer-item" href="../saber_mas/terminos.html">Terms</a></li>
-      <li><a class="footer-item">|</a></li>
-      <li><a class="footer-item" href="../saber_mas/policy.html">Policy</a></li>
-      <li><a class="footer-item">|</a></li>
-      <li><a class="footer-item" href="#">Contacto</a></li>
-    </ul>
+    <main>
+        <section class="section-primary">
+            <h1 class="title-espec">Tecnología del Automóvil </h1>
+            <div class="display-flow-especialidad">
+                <article class="wrapper-image-section-profesional">
+                    <div>
+                        <img class="img-profesional" src="../img/skills/tecnologia_automovil.jpg" alt="Imagen Tecnología del Automóvil " />
+                    </div>
 
-    <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
-    <p><br><br></p>
-  </footer>
 
-  <script src="../js/script.js"></script>
+                    <div class="position-profesional">
+                        <div class="card-container-profile-desktop">
+                            <div class="card">
+                                <div class="card-header">
+                                    <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
+                                </div>
+                                <div class="card-body">
+                                    <p class="name">SUSANA DOMENECH</p>
+                                    <p class="card_instituto">IES LES ALFÀBEGUES</p>
+                                    <p class="description">
+                                        ¿Quieres saber más?
+                                    </p>
+                                    <p class="description">Ponte en contacto con <b>Susana,</b> la coordinadora técnica del skill de
+                                        <b>Tecnología&nbsp;del&nbsp;Automóvil</b>
+                                    </p>
+                                    <a href="mailto:s.domenechmartinez@edu.gva.es" class="mail">s.domenechmartinez@edu.gva.es</a>
+                                </div>
+                                <div class="card-footer">
+                                    <p class="count"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </article>
+                <article class="wrapper-image-section-left-profesional">
+                    <p class="text-profesional-last">
+                        Los técnicos de esta modalidad de competición deben ser capaces de entender los diferentes sistemas del vehículo como son motores, transmisiones, frenado, electricidad, dirección y suspensión y llevar a cabo solución de problemas, mantenimiento y reparación
+                        de los mismos.
+                    </p>
+
+                    <p class="text subtitulo">Ciclos formativos relacionados</p>
+                    <ul class="text text-padding-profesional">
+                        <li>
+                            Técnico Superior en
+                            <b>Automoción</b>
+                        </li>
+                        <li>
+                            Técnico en
+                            <b>Carrocería</b>
+                        </li>
+                    </ul>
+                    <p class="text subtitulo">Aplicaciones</p>
+                    <p class="text-profesional">
+                        Estas técnicas de mantenimiento y reparación se desarrollan en los sectores productivos como: talleres de reparación de automóviles, reparación de maquinaria agrícola y obras públicas y reparación de vehículos industriales.
+                    </p>
+                </article>
+
+                <div class="card-container-profile">
+                    <div class="card">
+                        <div class="card-header">
+                            <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
+                        </div>
+                        <div class="card-body">
+                            <p class="name">SUSANA DOMENECH</p>
+                            <p class="card_instituto">IES LES ALFÀBEGUES</p>
+                            <p class="description">
+                                ¿Quieres saber más?
+                            </p>
+                            <p class="description">Ponte en contacto con <b>Susana,</b> la coordinadora técnica del skill de
+                                <b>Tecnología&nbsp;del&nbsp;Automóvil</b>
+                            </p>
+                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                        </div>
+                        <div class="card-footer">
+                            <p class="count"></p>
+                        </div>
+                    </div>
+                </div>
+
+        </section>
+        <section class="section-secondary">
+            <article class="video-container">
+                <div class="wrapper-video-section">
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/659355072?h=994f330cb2&dnt=1&app_id=122963" title="Tecnolog&iacute;a del Autom&oacute;vil CAS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/659341995?h=250dbc9f13&dnt=1&app_id=122963" title="Tecnolog&iacute;a del automovil Alumnos CAS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/659312212?h=f137f7f292&dnt=1&app_id=122963" title="Tecnolog&iacute;a del automovil Experto CAS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <ul class="footer-section">
+            <li><a class="footer-item" href="../saber_mas/terminos.html">Terms</a></li>
+            <li><a class="footer-item">|</a></li>
+            <li><a class="footer-item" href="../saber_mas/policy.html">Policy</a></li>
+            <li><a class="footer-item">|</a></li>
+            <li><a class="footer-item" href="#">Contacto</a></li>
+        </ul>
+
+        <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
+        <p><br><br></p>
+    </footer>
+
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
