--- a/especialidades/tecnologia_automovil_vlc.html
+++ b/especialidades/tecnologia_automovil_vlc.html
@@ -2,18 +2,18 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Web de CV Skills." />
-  <link rel="icon" type="image/jpg" href="../img/logoSkills.png" />
-  <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="stylesheet" href="../css/especialidades.css" />
-  <title>Web Skills CV</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Web de CV Skills." />
+    <link rel="icon" type="image/jpg" href="../img/logoSkills.png" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/especialidades.css" />
+    <title>Web Skills CV</title>
 </head>
 
 <body>
-  <!--
+    <!--
         Copyright (c) 2022 Santiago Benito, Juan Antonio Herráiz, Olga Tello, Esteban Adarme
         
         Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -34,157 +34,137 @@
         OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
         SOFTWARE.
     -->
-  <nav>
-    <div class="hamburguer-menu">
-      <a class="item-menu" href="../index_vlc.html"><img class="logo" src="../img/logoSkills.png"
-          alt="Web Skills Logo" /></a>
-      <p class="locationEvent"><b>Fira valència</b> - 27 al 31 de Març</p>
-      <div class="idiomas">
-        <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG">
-        <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG">
-      </div>
-      <button class="btn-toggle">
+    <nav>
+        <div class="hamburguer-menu">
+            <a class="item-menu" href="../index_vlc.html"><img class="logo" src="../img/logoSkills.png" alt="Web Skills Logo" /></a>
+            <p class="locationEvent"><b>Fira valència</b> - 27 al 31 de Març</p>
+            <div class="idiomas">
+                <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG">
+                <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG">
+            </div>
+            <button class="btn-toggle">
         <img src="../img/menu.svg" alt="Botón menú" />
       </button>
-    </div>
-
-    <ul class="menu">
-      <li><a class="item-menu" href="../saber_mas/queson_vlc.html">Què són?</a></li>
-      <li><a class="item-menu" href="../index_vlc.html#especialidades">Especialitats</a></li>
-      <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apunta't</a></li>
-      <p class="locationEvent-mobile">
-        Fira valència <br />
-        27 al 31 de Març
-      </p>
-    </ul>
-  </nav>
-
-  <main>
-    <section class="section-primary">
-      <h1 class="title-espec">Tecnologia de l'Automòbil</h1>
-      <div class="display-flow-especialidad">
-        <article class="wrapper-image-section-profesional">
-          <div>
-            <img class="img-profesional" src="../img/skills/tecnologia_automovil.jpg"
-              alt="Imagen Tecnología del Automóvil " />
-          </div>
-
-          <!-- <div class="position-profesional2">
-            <p class="text subtitulo">De lo mejorcito de valencia</p>
-            <ul class="text text-padding">
-              <li class="lista-li"><b>Lorenzo el pofesional</b></li>
-              <li class="lista-li">Lorenzo@fpmislata.com</li>
-            </ul>
-          </div> -->
-
-          <div class="position-profesional">
-            <div class="card-container-profile-desktop">
-              <div class="card">
-                <div class="card-header">
-                  <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
-                </div>
-                <div class="card-body">
-                  <p class="name">SUSANA DOMENECH</p>
-                  <p class="card_instituto">IES LES ALFÀBEGUES</p>
-                  <p class="description">
-                    Vols saber més?
-                  </p>
-                  <p class="*description">Posa't en contacte amb <b>Susana,</b> la coordinadora tècnica del skill de
-                    <b>Tecnologia&nbsp;de&nbsp;l'Automòbil</b>
-                  </p>
-                  <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
-                </div>
-                <div class="card-footer">
-                  <p class="count"></p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </article>
-        <article class="wrapper-image-section-left-profesional">
-          <p class="text-profesional-last">
-            Els tècnics d'aquesta modalitat de competició han de ser capaces d'entendre els diferents sistemes del
-            vehicle com són motors, transmissions, frenat, electricitat, direcció i suspensió i dur a terme solució de
-            problemes, manteniment i reparació d'aquests.
-          </p>
-
-          <p class="text subtitulo">Cicles formatius relacionats</p>
-          <ul class="text text-padding-profesional">
-            <li>
-              Tècnic Superior en
-              <b>Automoció</b>
-            </li>
-            <li>
-              Tècnic en
-              <b>Carrosseria</b>
-            </li>
-          </ul>
-          <p class="text subtitulo">Aplicacions</p>
-          <p class="text-profesional">
-            Aquestes tècniques de manteniment i reparació es desenvolupen en els sectors productius com: tallers de
-            reparació d'automòbils, reparació de maquinària agrícola i obres públiques i reparació de vehicles
-            industrials.
-          </p>
-        </article>
-
-        <div class="card-container-profile">
-          <div class="card">
-            <div class="card-header">
-              <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
-            </div>
-            <div class="card-body">
-              <p class="name">SUSANA DOMENECH</p>
-              <p class="card_instituto">IES LES ALFÀBEGUES</p>
-              <p class="description">
-                Vols saber més?
-              </p>
-              <p class="*description">Posa't en contacte amb <b>Susana,</b> la coordinadora tècnica del skill de
-                <b>Reparació&nbsp;de&nbsp;Carrosseria</b>
-              </p>
-              <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
-            </div>
-            <div class="card-footer">
-              <p class="count"></p>
-            </div>
-          </div>
         </div>
 
-    </section>
-    <section class="section-secondary">
-      <article class="video-container">
-        <div class="wrapper-video-section">
-          <iframe class="video-skills" src="https://player.vimeo.com/video/659356369?h=8d47560ef2&dnt=1&app_id=122963"
-            title="Tecnolog&iacute;a del Autom&oacute;vil CAS" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <iframe class="video-skills" src="https://player.vimeo.com/video/659341929?h=124f10b533&dnt=1&app_id=122963"
-            title="Tecnolog&iacute;a del automovil Alumnos CAS" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <iframe class="video-skills" src="https://player.vimeo.com/video/659327343?h=a95cf1d7b3&dnt=1&app_id=122963"
-            title="Tecnolog&iacute;a del automovil Experto CAS" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
-      </article>
-    </section>
-  </main>
+        <ul class="menu">
+            <li><a class="item-menu" href="../saber_mas/queson_vlc.html">Què són?</a></li>
+            <li><a class="item-menu" href="../index_vlc.html#especialidades">Especialitats</a></li>
+            <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apunta't</a></li>
+            <p class="locationEvent-mobile">
+                Fira valència <br /> 27 al 31 de Març
+            </p>
+        </ul>
+    </nav>
 
-  <footer>
-    <ul class="footer-section">
-      <li><a class="footer-item" href="../saber_mas/terminos_vlc.html">Terms</a></li>
-      <li><a class="footer-item">|</a></li>
-      <li><a class="footer-item" href="../saber_mas/policy_vlc.html">Policy</a></li>
-      <li><a class="footer-item">|</a></li>
-      <li><a class="footer-item" href="#">Contacte</a></li>
-    </ul>
+    <main>
+        <section class="section-primary">
+            <h1 class="title-espec">Tecnologia de l'Automòbil</h1>
+            <div class="display-flow-especialidad">
+                <article class="wrapper-image-section-profesional">
+                    <div>
+                        <img class="img-profesional" src="../img/skills/tecnologia_automovil.jpg" alt="Imagen Tecnología del Automóvil " />
+                    </div>
 
-    <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
-    <p><br><br></p>
-  </footer>
 
-  <script src="../js/script.js"></script>
+                    <div class="position-profesional">
+                        <div class="card-container-profile-desktop">
+                            <div class="card">
+                                <div class="card-header">
+                                    <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
+                                </div>
+                                <div class="card-body">
+                                    <p class="name">SUSANA DOMENECH</p>
+                                    <p class="card_instituto">IES LES ALFÀBEGUES</p>
+                                    <p class="description">
+                                        Vols saber més?
+                                    </p>
+                                    <p class="*description">Posa't en contacte amb <b>Susana,</b> la coordinadora tècnica del skill de
+                                        <b>Tecnologia&nbsp;de&nbsp;l'Automòbil</b>
+                                    </p>
+                                    <a href="mailto:s.domenechmartinez@edu.gva.es" class="mail">s.domenechmartinez@edu.gva.es</a>
+                                </div>
+                                <div class="card-footer">
+                                    <p class="count"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </article>
+                <article class="wrapper-image-section-left-profesional">
+                    <p class="text-profesional-last">
+                        Els tècnics d'aquesta modalitat de competició han de ser capaces d'entendre els diferents sistemes del vehicle com són motors, transmissions, frenat, electricitat, direcció i suspensió i dur a terme solució de problemes, manteniment i reparació d'aquests.
+                    </p>
+
+                    <p class="text subtitulo">Cicles formatius relacionats</p>
+                    <ul class="text text-padding-profesional">
+                        <li>
+                            Tècnic Superior en
+                            <b>Automoció</b>
+                        </li>
+                        <li>
+                            Tècnic en
+                            <b>Carrosseria</b>
+                        </li>
+                    </ul>
+                    <p class="text subtitulo">Aplicacions</p>
+                    <p class="text-profesional">
+                        Aquestes tècniques de manteniment i reparació es desenvolupen en els sectors productius com: tallers de reparació d'automòbils, reparació de maquinària agrícola i obres públiques i reparació de vehicles industrials.
+                    </p>
+                </article>
+
+                <div class="card-container-profile">
+                    <div class="card">
+                        <div class="card-header">
+                            <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
+                        </div>
+                        <div class="card-body">
+                            <p class="name">SUSANA DOMENECH</p>
+                            <p class="card_instituto">IES LES ALFÀBEGUES</p>
+                            <p class="description">
+                                Vols saber més?
+                            </p>
+                            <p class="*description">Posa't en contacte amb <b>Susana,</b> la coordinadora tècnica del skill de
+                                <b>Reparació&nbsp;de&nbsp;Carrosseria</b>
+                            </p>
+                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                        </div>
+                        <div class="card-footer">
+                            <p class="count"></p>
+                        </div>
+                    </div>
+                </div>
+
+        </section>
+        <section class="section-secondary">
+            <article class="video-container">
+                <div class="wrapper-video-section">
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/659356369?h=8d47560ef2&dnt=1&app_id=122963" title="Tecnolog&iacute;a del Autom&oacute;vil CAS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/659341929?h=124f10b533&dnt=1&app_id=122963" title="Tecnolog&iacute;a del automovil Alumnos CAS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="video-skills" src="https://player.vimeo.com/video/659327343?h=a95cf1d7b3&dnt=1&app_id=122963" title="Tecnolog&iacute;a del automovil Experto CAS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <ul class="footer-section">
+            <li><a class="footer-item" href="../saber_mas/terminos_vlc.html">Terms</a></li>
+            <li><a class="footer-item">|</a></li>
+            <li><a class="footer-item" href="../saber_mas/policy_vlc.html">Policy</a></li>
+            <li><a class="footer-item">|</a></li>
+            <li><a class="footer-item" href="#">Contacte</a></li>
+        </ul>
+
+        <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
+        <p><br><br></p>
+    </footer>
+
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
